RESOLVED FIXED35837
Column breaking ignores floats
https://bugs.webkit.org/show_bug.cgi?id=35837
Summary Column breaking ignores floats
mitz
Reported 2010-03-06 17:55:37 PST
<rdar://problem/7722008> Try to avoid column-breaks in the middle of a float if possible. Patch forthcoming.
Attachments
Column-break above a float if it helps (8.77 KB, patch)
2010-03-06 18:06 PST, mitz
no flags
Column-break above a float if it helps (8.77 KB, patch)
2010-03-06 19:17 PST, mitz
simon.fraser: review+
mitz
Comment 1 2010-03-06 18:06:13 PST
Created attachment 50161 [details] Column-break above a float if it helps
mitz
Comment 2 2010-03-06 19:17:49 PST
Created attachment 50166 [details] Column-break above a float if it helps Fixed typos in the change log pointed out by Sam.
mitz
Comment 3 2010-03-07 10:15:34 PST
Note You need to log in before you can comment on or make changes to this bug.