<rdar://problem/7722008> Column breaking ignores floats https://bugs.webkit.org/show_bug.cgi?id=35837

Reviewed by Simon Fraser.

WebCore:

Test: fast/multicol/float-truncation.html

Introduce an earlier column-break if otherwise a float that could fit
inside a single column will be split between columns.

It is still possible for floats to be needlessly broken if initially
they fit in the column, but normal flow truncation then shortens the
column.

* rendering/RenderBlock.cpp:
(WebCore::RenderBlock::visibleTopOfHighestFloatExtendingBelow): Added.
Returns the visible top of the highest descendant float that visibly
extends below the given y offset, ignoring floats that are taller than
the given maximum height.
(WebCore::RenderBlock::layoutColumns): If the initial column height
would cause a float to be split, truncate above the float.
* rendering/RenderBlock.h:

LayoutTests:

* fast/multicol/float-truncation-expected.txt: Added.
* fast/multicol/float-truncation.html: Added.



Canonical link: https://commits.webkit.org/46933@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@55636 268f45cc-cd09-0410-ab3c-d52691b4dbfc